compilelog.log

/Users/maochun/esp32prj/Project_CAM/branch/ota_Client/ota_client/handler/ota_handler/ota_handler.c: In function 'ota_handler_process':
/Users/maochun/esp32prj/Project_CAM/branch/ota_Client/ota_client/handler/ota_handler/ota_handler.c:68:35: error: passing argument 1 of 'esp_https_ota' from incompatible pointer type [-Wincompatible-pointer-types]
   68 |     esp_err_t ret = esp_https_ota(&config);
      |                                   ^~~~~~~
      |                                   |
      |                                   esp_http_client_config_t *
In file included from /Users/maochun/esp32prj/Project_CAM/branch/ota_Client/ota_client/handler/ota_handler/ota_handler.c:2:
/Users/maochun/esp32prj/esp-idf/components/esp_https_ota/include/esp_https_ota.h:114:55: note: expected 'const esp_https_ota_config_t *' but argument is of type 'esp_http_client_config_t *'
  114 | esp_err_t esp_https_ota(const esp_https_ota_config_t *ota_config);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
[51/170] Building C object esp-idf/spiffs/CMakeFiles/__idf_spiffs.dir/spiffs/src/spiffs_nucleus.c.obj